Bug 866513 - Non-empty MediaStreamTrack labels. r=jib